--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,5 @@ build/
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
-# API keys / tokens
-google-services.json
-ios/Runner/GoogleService-Info.plist
+pubspec.lock
 
